small fixes + changes for clarity + units added + funcbr removed from clone cmd

--- a/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
+++ b/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "    repo_path = '/content/I002658A_ESS'\n",
     "    if not os.path.exists(repo_path):\n",
-    "        !git clone --branch funcbr https://github.com/SENSE-UGent/I002658A_ESS.git\n",
+    "        !git clone https://github.com/SENSE-UGent/I002658A_ESS.git\n",
     "    if repo_path not in sys.path:\n",
     "        sys.path.append(repo_path)\n",
     "\n",
@@ -73,21 +73,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the utility functions\n",
-    "from Utils.func import interpolate, export_grid, lin_sens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# 0.1: Import packages into workspace\n",
     "# -----------------------------------------------------\n",
     "'''\n",
     "Import the required modules to run all code in this notebook.\n",
     "'''\n",
+    "\n",
+    "# Import the utility functions\n",
+    "from Utils.func import interpolate, export_grid, lin_sens\n",
+    "\n",
     "# General utility modules\n",
     "import warnings\n",
     "import re\n",
@@ -274,12 +268,12 @@
    "source": [
     "# 0.3: Get dataset location\n",
     "# -------------------------\n",
-    "# store dataset URL's as string variables\n",
+    "# store dataset paths as string variables\n",
     "FDEM_surveydata = cd + '//I002658A_ESS//Data//Survey2025//FDEM_2024.csv'\n",
     "FDEM_transect = cd + '//I002658A_ESS//Data//Survey2025//FDEM_transect_2024.csv'\n",
     "samples = cd + '//I002658A_ESS//Data//Survey2025//samples_2024.csv'\n",
     "\n",
-    "# URL for grid masking file\n",
+    "# for grid masking file\n",
     "blank_json = cd + '//I002658A_ESS//Data//Survey2025//blank.json'\n",
     "\n",
     "# Create dataframes from datasets\n",
@@ -549,7 +543,7 @@
     "\n",
     "save_to_file = False  # set to True to save the interpolated grid as a GeoTIF in your export directory\n",
     "\n",
-    "fig, axes = plt.subplots(4, 3, figsize=(20, 15))\n",
+    "fig, axes = plt.subplots(4, 3, figsize=(15, 15), sharex=True, sharey=True)\n",
     "\n",
     "i = 0\n",
     "data_grids = {}\n",
@@ -657,6 +651,7 @@
     "        else:\n",
     "            ax1.plot(dt[col], label = col)\n",
     "ax1.set_ylabel('ECa in mS/m')\n",
+    "ax1.set_xlabel('Position along transect (m)')\n",
     "ax1.set_title('ECa data along reference transect (0 = North).')\n",
     "ax1.legend()\n",
     "\n",
@@ -785,7 +780,7 @@
     "\"\"\"\n",
     "starting depths* are generated here with np.arange** alternatively, you \n",
     "can manually create an array of depth boundary values (e.g., depths = [0.5,0.1],\n",
-    "for a 3-layer model with layer boundaries at 0.5 m and 1.0 m. \n",
+    "for a 3-layer model with layer boundaries at 0.5 m and 1.0 m). \n",
     "\n",
     "* the minimum boundary depth has to be larger than 0\n",
     "\n",
@@ -1014,7 +1009,7 @@
     "    # Plot the data\n",
     "    ax.step(row_data, depth_values)\n",
     "    ax.set_xlabel('EC [mS/m]')\n",
-    "    ax.set_ylabel('Depth')\n",
+    "    ax.set_ylabel('Depth [m]')\n",
     "    ax.set_title(f'Sample {int(sample_id)}')\n",
     "    ax.set_xlim(global_x_min, global_x_max)\n",
     "    ax.invert_yaxis()\n",
