--- a/Notebooks/03_ESS_Interpreting_geophysical_soil_variations.ipynb
+++ b/Notebooks/03_ESS_Interpreting_geophysical_soil_variations.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "    repo_path = '/content/I002658A_ESS'\n",
     "    if not os.path.exists(repo_path):\n",
-    "        !git clone --branch funcbr https://github.com/SENSE-UGent/I002658A_ESS.git\n",
+    "        !git clone https://github.com/SENSE-UGent/I002658A_ESS.git\n",
     "    if repo_path not in sys.path:\n",
     "        sys.path.append(repo_path)\n",
     "\n",
@@ -425,9 +425,10 @@
     "# between the analysed properties and the output from different coil pairs.\n",
     "\"\"\"\n",
     "\n",
-    "save_to_file = True # set to True if you want to save the plots to a PDF\n",
+    "save_to_file = False # set to True if you want to save the plots to a PDF\n",
     "\n",
     "sample_col = 'clay_10cm' # change into, e.g., 'clay_10cm [%]' or 'TOC_10cm  [g/cm3]'\n",
+    "sample_col_unit = '[%]' # change into, e.g., 'clay_10cm [%]' or 'TOC_10cm  [g/cm3]'\n",
     "fdem_col = 'HCP0.5' # change into, for instance, 'PRP1.0' or 'HCP2.0_inph'\n",
     "\n",
     "# The following code assumes that the fdem_col is a string that matches one of\n",
@@ -518,12 +519,12 @@
     "                    markersize=15\n",
     "                    )\n",
     "\n",
-    "ax3.set_xlabel(sample_col)\n",
+    "ax3.set_xlabel(f'{sample_col} {sample_col_unit}')\n",
     "if 'inph' in fdem_col:\n",
     "    ax3.set_ylabel(fdem_col + ' [ppt]')\n",
-    "    ax3.set_title(f'{fdem_col} IP vs. {sample_col}.')\n",
+    "    ax3.set_title(f'{fdem_col} IP vs. {sample_col} {sample_col_unit}.')\n",
     "else:\n",
-    "    ax3.set_ylabel(fdem_col + ' [mS/m]')\n",
+    "    ax3.set_ylabel(fdem_col + ' ECa [mS/m]')\n",
     "    ax3.set_title(f'{fdem_col} ECa vs. {sample_col}.')\n",
     "\n",
     "# Add labels to scatter points showing the sample ID's\n",
@@ -577,7 +578,7 @@
     "global_x_max = max(d_inv_samps[EC_cols].max().max(), d_ec_logs['EC_msm'].max())\n",
     "\n",
     "# Create the subplots\n",
-    "fig, axes = plt.subplots(subplot_rows, subplot_cols, figsize=(15, 9))\n",
+    "fig, axes = plt.subplots(subplot_rows, subplot_cols, figsize=(15, 9), sharey=True, sharex=True)\n",
     "fig.subplots_adjust(hspace=0.5, wspace=0.3)\n",
     "# Loop through each sample ID and plot the EC values\n",
     "for i, sample_id in enumerate(unique_sample_ids):\n",
@@ -599,9 +600,10 @@
     "    else:\n",
     "        ax.step(row_data, depth_values)\n",
     "        ax.step(data['EC_msm'], data['depth_m'])\n",
-    "\n",
-    "    ax.set_xlabel('EC [mS/m]')\n",
-    "    ax.set_ylabel('Depth [m]')\n",
+    "    if i // subplot_cols == subplot_rows - 1:\n",
+    "        ax.set_xlabel('EC [mS/m]')\n",
+    "    if i % subplot_cols == 0:\n",
+    "        ax.set_ylabel('Depth [m]')\n",
     "    ax.set_title(f'Sample {int(sample_id)}')\n",
     "    ax.set_xlim(global_x_min, global_x_max)\n",
     "    ax.invert_yaxis()\n",
@@ -917,7 +919,7 @@
     "axes[1].scatter(ds[fdem_col], predicted_bulk_ec_ws, alpha=0.5, color='gray', \n",
     "                label = \"Waxman-Smits/Revill\")\n",
     "axes[1].legend()\n",
-    "axes[1].set_xlabel(fdem_col)\n",
+    "axes[1].set_xlabel(fdem_col + \" ECa [mS/m]\")\n",
     "axes[1].set_ylabel(\"Predicted EC [mS/m]\")\n",
     "#axes[1].set_title(f\"Predicted EC vs {fdem_col}\")\n",
     "\n",
@@ -992,6 +994,8 @@
     "save_to_file=False # set to True if you want to save the plots to a PDF \n",
     "\n",
     "target = 'pH_H2O_10cm' # ds columnname for column with target property \n",
+    "target_unit = '[-]' # unit of the target property\n",
+    "\n",
     "fdem_col = 'EC_end' # ds columnname for column with FDEM dataset (inverted or non-inverted)\n",
     "hydra_col = 'EC_bulk_hydra' # ds columnname for hydraprobe data column\n",
     "\n",
@@ -1014,8 +1018,8 @@
     "\n",
     "# FDEM compare plot\n",
     "ax[0].scatter(ds_in[fdem_col],ds_in[target], s=200)\n",
-    "ax[0].set_xlabel(f'{fdem_col} data')\n",
-    "ax[0].set_ylabel(f'{target}')\n",
+    "ax[0].set_xlabel(f'{fdem_col} (mS/m) data')\n",
+    "ax[0].set_ylabel(f'{target} {target_unit}')\n",
     "# add sample ID labels to the plot\n",
     "for index, row in ds_in.iterrows():\n",
     "    ax[0].text(row[fdem_col], row[target], str(int(row['ID'])), \n",
@@ -1025,8 +1029,8 @@
     "\n",
     "# HyrdaGo compare plot\n",
     "ax[1].scatter(ds_in[hydra_col],ds_in[target], s=200)\n",
-    "ax[1].set_xlabel(hydra_col)\n",
-    "ax[1].set_ylabel(f'{target}')\n",
+    "ax[1].set_xlabel(f'{hydra_col} (mS/m) data')\n",
+    "ax[1].set_ylabel(f'{target} {target_unit}')\n",
     "\n",
     "#   add sample ID labels to the plot\n",
     "for index, row in ds_in.iterrows():\n",
@@ -1112,8 +1116,8 @@
     "              color='black', label='Observations')\n",
     "ax[0].plot(ds_in[fdem_col], ds_in[col_name], \n",
     "           label=f'Linear regression, R2 = {r2_linear_numpy:.3f}')\n",
-    "ax[0].set_xlabel(fdem_col)\n",
-    "ax[0].set_ylabel(target)\n",
+    "ax[0].set_xlabel('ECa [mS/m]')\n",
+    "ax[0].set_ylabel(f'{target} {target_unit}')\n",
     "ax[0].legend()\n",
     "\n",
     "# plot comparison of observed and predicted target property\n",
@@ -1127,8 +1131,8 @@
     "    ax[1].text(row[target], row[col_name], str(int(row['ID'])), \n",
     "            fontsize=10, ha='center', va='center', color='white')\n",
     "\n",
-    "ax[1].set_xlabel(f'Observed {target}')\n",
-    "ax[1].set_ylabel(f'Predicted {target}')\n",
+    "ax[1].set_xlabel(f'Observed {target} {target_unit}')\n",
+    "ax[1].set_ylabel(f'Predicted {target} {target_unit}')\n",
     "ax[1].set_title('average MSE: {:.3f}'.format(average_mse_numpy))\n",
     "# Set ax[1] limits\n",
     "combined_min = min(ds_in[target].min(), ds_in[col_name].min())\n",
@@ -1215,7 +1219,7 @@
     "# im.set_clim(np.percentile(data_grid['grid'].flatten()[~np.isnan(data_grid['grid'].flatten())], pmin),\n",
     "#         np.percentile(data_grid['grid'].flatten()[~np.isnan(data_grid['grid'].flatten())], pmax))\n",
     "\n",
-    "ax.set_title(f\"{col_name}\")\n",
+    "ax.set_title(f\"{col_name} {target_unit}\")\n",
     "plt.colorbar(im, ax=ax)\n",
     "\n",
     "if export_raster:\n",
