--- a/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
+++ b/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
@@ -792,18 +792,14 @@
     "\n",
     "# visualing the interpolated dataset\n",
     "plt.figure(figsize=(10, 10))\n",
-    "# im = ax.imshow(data_grid['grid'], \n",
-    "#                 origin='lower', \n",
-    "#                 extent=(extent['x_min'],\n",
-    "#                         extent['x_max'],\n",
-    "#                         extent['y_min'],\n",
-    "#                         extent['y_max']),\n",
-    "#                 cmap = 'viridis_r'\n",
-    "#                 )\n",
     "\n",
-    "plt.imshow(data_grid['grid'], origin='lower', extent=[x_min, x_max, y_min, y_max])\n",
+    "plt.imshow(data_grid['grid'], origin='lower', extent=[extent['x_min'],\n",
+    "                        extent['x_max'],\n",
+    "                        extent['y_min'],\n",
+    "                        extent['y_max']])\n",
+    "\n",
     "plt.colorbar().set_label('ECa (mS/m)')\n",
-    "plt.clim(np.percentile(df[dataset].values, 2), np.percentile(df[dataset].values, 98))\n",
+    "plt.clim(np.percentile(df[col].values, 2), np.percentile(df[col].values, 98))\n",
     "\n",
     "# plotting the 'd_cal' dataframe as points (with their sampling ID)\n",
     "marker_color = 'red'\n",
@@ -890,50 +886,6 @@
     "\n",
     "# check the first 5 rows of the calibration set\n",
     "calibration_set.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "iooxa": {
-     "id": {
-      "block": "VxouiiRUvEAwd5FOp1V5",
-      "project": "GVe4Q9q4oCpqydat1sXN",
-      "version": 1
-     },
-     "outputId": null
-    }
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Scipy method - knn search\n",
-    "-------------------------\n",
-    "Perform a knn-search on two dataframes to identify points that are closest\n",
-    "between columns of an input dataframe (in the case below 'df'), and a query\n",
-    "dataframe (in the case below the calibration sample dataset 'd_cal').\n",
-    "'''\n",
-    "\n",
-    "# transform dataframes to numpy arrays and perform knn search\n",
-    "data_in = np.array(list(zip(df['x'].values,df['y'].values)) )\n",
-    "data_query = np.array(list(zip(d_cal['x'].values,d_cal['y'].values)) )\n",
-    "btree = cKDTree(data_in)\n",
-    "dist, idx = btree.query(data_query, k=1) # k = number of neighbors; \n",
-    "                                         # idx = index of the neighbors\n",
-    "                                         # dist = distance between the neighbors       \n",
-    "\n",
-    "# Concatenate the survey data values at the location closest to the \n",
-    "# queried dataset based on the indices 'idx' (df.iloc[idx]), and the queried \n",
-    "# data themselves.\n",
-    "calibration_set = pd.concat(\n",
-    "    [\n",
-    "    df.iloc[idx],   # part of original dataframe that is closest to queried data                    \n",
-    "    d_cal.set_index(df.iloc[idx].index) # reset index of the queried dataframe\n",
-    "    .rename(columns = {'x':'x_clhs','y':'y_clhs'}) # and rename the x-y columns\n",
-    "    ],\n",
-    "    axis=1 #concatenate along the correct axis (i.e., along the columns)\n",
-    "    )"
    ]
   },
   {
