uniformisation of cgeometry variable

--- a/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
+++ b/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
@@ -639,19 +639,19 @@
     "'''\n",
     "\n",
     "# Specify the data column of which you want to interpolate the values\n",
-    "col = 'HCP1.0'\n",
+    "cgeometry = 'HCP1.0'\n",
     "cell_size = 0.25 # raster cell size in meters\n",
     "\n",
     "# ******************************************************************** #\n",
     "\n",
     "# Interpolation function\n",
-    "data_grid = interpolate(df['x'], df['y'], df[col], cell_size=cell_size, blank=blank)\n",
+    "data_grid = interpolate(df['x'], df['y'], df[cgeometry], cell_size=cell_size, blank=blank)\n",
     "\n",
     "# Specify the grid extent for plotting with correct x-y coordinates\n",
     "extent = data_grid['extent']\n",
     "\n",
     "# Set units and colormap (cmap) for either IP or ECa data\n",
-    "if 'inph' in col:\n",
+    "if 'inph' in cgeometry:\n",
     "        unit = 'IP [ppt]'\n",
     "        cmap = 'gray_r'\n",
     "else:\n",
@@ -675,7 +675,7 @@
     "im.set_clim(np.percentile(data_grid['grid'].flatten()[~np.isnan(data_grid['grid'].flatten())], pmin),\n",
     "        np.percentile(data_grid['grid'].flatten()[~np.isnan(data_grid['grid'].flatten())], pmax))\n",
     "\n",
-    "ax.set_title(f\"{col} ({unit})\")\n",
+    "ax.set_title(f\"{cgeometry} ({unit})\")\n",
     "plt.colorbar(im, ax=ax)"
    ]
   },
@@ -799,7 +799,7 @@
     "                        extent['y_max']])\n",
     "\n",
     "plt.colorbar().set_label('ECa (mS/m)')\n",
-    "plt.clim(np.percentile(df[col].values, 2), np.percentile(df[col].values, 98))\n",
+    "plt.clim(np.percentile(df[cgeometry].values, 2), np.percentile(df[cgeometry].values, 98))\n",
     "\n",
     "# plotting the 'd_cal' dataframe as points (with their sampling ID)\n",
     "marker_color = 'red'\n",
