--- a/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
+++ b/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ IPython is already installed.\n",
+      "✅ ipywidgets is already installed.\n",
+      "✅ numpy is already installed.\n",
+      "✅ pandas is already installed.\n",
+      "✅ matplotlib is already installed.\n",
+      "✅ scipy is already installed.\n",
+      "📦 scikit-learn not found. Installing 'scikit-learn'...\n",
+      "🔧 Using subprocess pip install...\n",
+      "❌ Installation succeeded but failed to import scikit-learn: No module named 'scikit-learn'\n",
+      "✅ geopandas is already installed.\n",
+      "✅ rasterio is already installed.\n",
+      "✅ shapely is already installed.\n",
+      "✅ emagpy is already installed.\n",
+      "✅ requests is already installed.\n",
+      "✅ clhs is already installed.\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the repository path:\n",
     "# If the code is run in Google Colab This code will check if the repository is already cloned, if not it will clone it\n",
@@ -69,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Working Directory is  c:\\Users\\pdweerdt\\Documents\\Repos\n"
+     ]
+    }
+   ],
    "source": [
     "# set the working directory, place an r in front to address special characters\n",
     "os.chdir(r'c:/Users/pdweerdt/Documents/Repos')\n",
@@ -222,9 +252,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68cd10ec01b24e84b311278d14e2612b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='<iframe src=\"https://www.geopunt.be/embed/d1fa24f5-a258-45b1-887d-8c1f6928a437\" wid…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 0.2: Exploring test site geodata from 'geopunt.be'\n",
     "# --------------------------------------------------\n",
@@ -262,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
