--- a/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
+++ b/Notebooks/01_ESS-Introduction_to_geophysical_data_analysis.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "if 'google.colab' in sys.modules:\n",
     "\n",
-    "    repo_path = '/content/I002658A_ESS'\n",
+    "    repo_path = r'\\content\\I002658A_ESS'\n",
     "    if not os.path.exists(repo_path):\n",
     "        !git clone https://github.com/SENSE-UGent/I002658A_ESS.git\n",
     "    if repo_path not in sys.path:\n",
@@ -63,7 +63,7 @@
     "\n",
     "else:\n",
     "\n",
-    "    repo_path = r'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS' # Change this to the location of the repository on your machine\n",
+    "    repo_path = r'c:\\Users\\pdweerdt\\Documents\\Repos\\I002658A_ESS' # Change this to the location of the repository on your machine\n",
     "    if repo_path not in sys.path:\n",
     "        sys.path.append(repo_path) \n",
     "\n",
@@ -72,7 +72,7 @@
     "\n",
     "# Read the requirements.txt file\n",
     "\n",
-    "requirements_path = repo_path + '/Utils/requirements.txt'\n",
+    "requirements_path = repo_path + r'\\Utils\\requirements.txt'\n",
     "\n",
     "with open(requirements_path) as f:\n",
     "    required_packages = f.read().splitlines()\n",
@@ -140,7 +140,7 @@
     "# get the current directory and store it as a variable\n",
     "\n",
     "cd = os.getcwd()\n",
-    "print(\"Current Working Directory is \" , cd)"
+    "print('Current Working Directory is ', cd)"
    ]
   },
   {
@@ -159,12 +159,12 @@
    "outputs": [],
    "source": [
     "# set the working directory, place an r in front to address special characters\n",
-    "os.chdir(r'c:/Users/pdweerdt/Documents/Repos')\n",
+    "os.chdir(r'c:\\Users\\pdweerdt\\Documents\\Repos')\n",
     "\n",
     "# get the current directory and store it as a variable\n",
     "\n",
     "cd = os.getcwd()\n",
-    "print(\"Current Working Directory is \" , cd)"
+    "print('Current Working Directory is ', cd)"
    ]
   },
   {
@@ -237,13 +237,13 @@
     "cLHS_validation: validation sample dataset\n",
     "'''\n",
     "\n",
-    "FDEM_surveydata = cd + '//I002658A_ESS//Data//Example//FDEM_bott.csv'\n",
-    "FDEM_transect = cd + '//I002658A_ESS//Data//Example//FDEM_transect.csv'\n",
-    "cLHS_calibration = cd + '//I002658A_ESS//Data//Example//cLHS_calibration.csv'\n",
-    "cLHS_validation = cd + '//I002658A_ESS//Data//Example//cLHS_validation.csv'\n",
+    "FDEM_surveydata = cd + r'\\I002658A_ESS\\Data\\Example\\FDEM_bott.csv'\n",
+    "FDEM_transect = cd + r'\\I002658A_ESS\\Data\\Example\\FDEM_transect.csv'\n",
+    "cLHS_calibration = cd + r'\\I002658A_ESS\\Data\\Example\\cLHS_calibration.csv'\n",
+    "cLHS_validation = cd + r'\\I002658A_ESS\\Data\\Example\\cLHS_validation.csv'\n",
     "\n",
     "# for grid masking file\n",
-    "blank_json = cd + '//I002658A_ESS//Data//Example//blank.json'\n",
+    "blank_json = cd + r'\\I002658A_ESS\\Data\\Example\\blank_bott.json'\n",
     "\n",
     "# print an example dataset location\n",
     "print('FDEM_surveydata path: ', FDEM_surveydata)"
