--- a/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
+++ b/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,31 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ IPython is already installed.\n",
-      "✅ ipywidgets is already installed.\n",
-      "✅ numpy is already installed.\n",
-      "✅ pandas is already installed.\n",
-      "✅ matplotlib is already installed.\n",
-      "✅ scipy is already installed.\n",
-      "📦 scikit-learn not found. Installing 'scikit-learn'...\n",
-      "🔧 Using subprocess pip install...\n",
-      "❌ Installation succeeded but failed to import scikit-learn: No module named 'scikit-learn'\n",
-      "✅ geopandas is already installed.\n",
-      "✅ rasterio is already installed.\n",
-      "✅ shapely is already installed.\n",
-      "✅ emagpy is already installed.\n",
-      "✅ requests is already installed.\n",
-      "✅ clhs is already installed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set the repository path:\n",
     "# If the code is run in Google Colab This code will check if the repository is already cloned, if not it will clone it\n",
@@ -63,7 +41,7 @@
     "\n",
     "if 'google.colab' in sys.modules:\n",
     "\n",
-    "    repo_path = '/content/I002658A_ESS'\n",
+    "    repo_path = r'\\content\\I002658A_ESS'\n",
     "    if not os.path.exists(repo_path):\n",
     "        !git clone https://github.com/SENSE-UGent/I002658A_ESS.git\n",
     "    if repo_path not in sys.path:\n",
@@ -71,7 +49,7 @@
     "\n",
     "else:\n",
     "\n",
-    "    repo_path = r'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS' # Change this to the location of the repository on your machine\n",
+    "    repo_path = r'c:\\Users\\pdweerdt\\Documents\\Repos\\I002658A_ESS' # Change this to the location of the repository on your machine\n",
     "    if repo_path not in sys.path:\n",
     "        sys.path.append(repo_path) \n",
     "\n",
@@ -80,7 +58,7 @@
     "\n",
     "# Read the requirements.txt file\n",
     "\n",
-    "requirements_path = repo_path + '/Utils/requirements.txt'\n",
+    "requirements_path = repo_path + r'\\Utils\\requirements.txt'\n",
     "\n",
     "with open(requirements_path) as f:\n",
     "    required_packages = f.read().splitlines()\n",
@@ -91,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +146,7 @@
     "# get the current directory and store it as a variable\n",
     "\n",
     "cd = os.getcwd()\n",
-    "print(\"Current Working Directory is \" , cd)"
+    "print('Current Working Directory is ', cd)"
    ]
   },
   {
@@ -182,25 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current Working Directory is  c:\\Users\\pdweerdt\\Documents\\Repos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set the working directory, place an r in front to address special characters\n",
-    "os.chdir(r'c:/Users/pdweerdt/Documents/Repos')\n",
+    "os.chdir(r'c:\\Users\\pdweerdt\\Documents\\Repos')\n",
     "\n",
     "# get the current directory and store it as a variable\n",
     "\n",
     "cd = os.getcwd()\n",
-    "print(\"Current Working Directory is \" , cd)"
+    "print('Current Working Directory is ', cd)"
    ]
   },
   {
@@ -252,24 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68cd10ec01b24e84b311278d14e2612b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='<iframe src=\"https://www.geopunt.be/embed/d1fa24f5-a258-45b1-887d-8c1f6928a437\" wid…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 0.2: Exploring test site geodata from 'geopunt.be'\n",
     "# --------------------------------------------------\n",
@@ -307,19 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 0.3: Get dataset location\n",
     "# -------------------------\n",
     "# store dataset paths as string variables\n",
-    "FDEM_surveydata = cd + '//I002658A_ESS//Data//Survey2025//FDEM_2024.csv'\n",
-    "FDEM_transect = cd + '//I002658A_ESS//Data//Survey2025//FDEM_transect_2024.csv'\n",
-    "samples = cd + '//I002658A_ESS//Data//Survey2025//samples_2024.csv'\n",
+    "FDEM_surveydata = cd + r'\\I002658A_ESS\\Data\\Survey2025\\FDEM_2024.csv'\n",
+    "FDEM_transect = cd + r'\\I002658A_ESS\\Data\\Survey2025\\FDEM_transect_2024.csv'\n",
+    "samples = cd + r'\\I002658A_ESS\\Data\\Survey2025\\samples_2024.csv'\n",
     "\n",
     "# for grid masking file\n",
-    "blank_json = cd + '//I002658A_ESS//Data//Survey2025//blank.json'\n",
+    "blank_json = cd + r'\\I002658A_ESS\\Data\\Survey2025\\blank.json'\n",
     "\n",
     "# Create dataframes from datasets\n",
     "'''\n",
@@ -359,7 +314,7 @@
    "source": [
     "#  let's have a look again at our current working directory\n",
     "cd = os.getcwd()\n",
-    "print(\"Current Working Directory is \" , cd)"
+    "print('Current Working Directory is ', cd)"
    ]
   },
   {
@@ -376,9 +331,9 @@
    "outputs": [],
    "source": [
     "#  Define the path where to export results, make sure the folder exists\n",
-    "export_path = cd + '//I002658A_ESS//Results'\n",
+    "export_path = cd + r'\\I002658A_ESS\\Results'\n",
     "\n",
-    "print(\"Results will be exported to: \", export_path)"
+    "print('Results will be exported to: ', export_path)"
    ]
   },
   {
