--- a/Notebooks/03_ESS_Interpreting_geophysical_soil_variations.ipynb
+++ b/Notebooks/03_ESS_Interpreting_geophysical_soil_variations.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "if 'google.colab' in sys.modules:\n",
     "\n",
-    "    repo_path = '/content/I002658A_ESS'\n",
+    "    repo_path = r'\\content\\I002658A_ESS'\n",
     "    if not os.path.exists(repo_path):\n",
     "        !git clone https://github.com/SENSE-UGent/I002658A_ESS.git\n",
     "    if repo_path not in sys.path:\n",
@@ -49,7 +49,7 @@
     "\n",
     "else:\n",
     "\n",
-    "    repo_path = r'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS' # Change this to the location of the repository on your machine\n",
+    "    repo_path = r'c:\\Users\\pdweerdt\\Documents\\Repos\\I002658A_ESS' # Change this to the location of the repository on your machine\n",
     "    if repo_path not in sys.path:\n",
     "        sys.path.append(repo_path) \n",
     "\n",
@@ -58,7 +58,7 @@
     "\n",
     "# Read the requirements.txt file\n",
     "\n",
-    "requirements_path = repo_path + '/Utils/requirements.txt'\n",
+    "requirements_path = repo_path + r'\\Utils\\requirements.txt'\n",
     "\n",
     "with open(requirements_path) as f:\n",
     "    required_packages = f.read().splitlines()\n",
@@ -162,7 +162,7 @@
     "# get the current directory and store it as a variable\n",
     "\n",
     "cd = os.getcwd()\n",
-    "print(\"Current Working Directory is \" , cd)"
+    "print('Current Working Directory is ', cd)"
    ]
   },
   {
@@ -181,12 +181,12 @@
    "outputs": [],
    "source": [
     "# set the working directory, place an r in front to address special characters\n",
-    "os.chdir(r'c:/Users/pdweerdt/Documents/Repos')\n",
+    "os.chdir(r'c:\\Users\\pdweerdt\\Documents\\Repos')\n",
     "\n",
     "# get the current directory and store it as a variable\n",
     "\n",
     "cd = os.getcwd()\n",
-    "print(\"Current Working Directory is \" , cd)"
+    "print('Current Working Directory is ', cd)"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "source": [
     "#  let's have a look again at our current working directory\n",
     "cd = os.getcwd()\n",
-    "print(\"Current Working Directory is \" , cd)"
+    "print('Current Working Directory is ', cd)"
    ]
   },
   {
@@ -228,9 +228,9 @@
    "outputs": [],
    "source": [
     "#  Define the path where to export results, make sure the folder exists (create it if necessary)\n",
-    "export_path = cd + '//I002658A_ESS//Results'\n",
+    "export_path = cd + r'\\I002658A_ESS\\Results'\n",
     "\n",
-    "print(\"Results will be exported to: \", export_path)"
+    "print('Results will be exported to: ', export_path)"
    ]
   },
   {
@@ -336,25 +336,25 @@
     "FDEM_inverted_samples = [] #dataset location Google Drive or local machine (string)\n",
     "\n",
     "# Location of field datasets\n",
-    "EC_logs = cd + '//I002658A_ESS//Data//Survey2025//EC_logs_2024.csv'\n",
-    "samples = cd + '//I002658A_ESS//Data//Survey2025//samples_2024.csv' \n",
+    "EC_logs = cd + r'\\I002658A_ESS\\Data\\Survey2025\\EC_logs_2024.csv'\n",
+    "samples = cd + r'\\I002658A_ESS\\Data\\Survey2025\\samples_2024.csv' \n",
     "\n",
     "# **************************************************************************** #\n",
     "\n",
     "# Provided dataset locations\n",
-    "FDEM_surveydata = cd + '//I002658A_ESS//Data//Survey2025//FDEM_2024.csv'\n",
-    "FDEM_transect = cd + '//I002658A_ESS//Data//Survey2025//FDEM_transect_2024.csv'\n",
+    "FDEM_surveydata = cd + r'\\I002658A_ESS\\Data\\Survey2025\\FDEM_2024.csv'\n",
+    "FDEM_transect = cd + r'\\I002658A_ESS\\Data\\Survey2025\\FDEM_transect_2024.csv'\n",
     "\n",
     "\n",
     "if FDEM_inverted_samples == []:\n",
-    "    FDEM_inverted_samples = cd + '//I002658A_ESS//Data//Example//FDEM_inv_samples_example.csv'\n",
+    "    FDEM_inverted_samples = cd + r'\\I002658A_ESS\\Data\\Example\\FDEM_inv_samples_example.csv'\n",
     "    warnings.warn('No dataset provided for FDEM_inverted_samples. Using example dataset instead.')\n",
     "if FDEM_inverted_all == []:\n",
-    "    FDEM_inverted_all = cd + '//I002658A_ESS//Data//Example//FDEM_inverted_all_example.csv'\n",
+    "    FDEM_inverted_all = cd + r'\\I002658A_ESS\\Data\\Example\\FDEM_inverted_all_example.csv'\n",
     "    warnings.warn('No dataset provided for FDEM_inverted_all. Using example dataset instead.')\n",
     "\n",
     "# URL for grid masking file\n",
-    "blank_json = cd + '//I002658A_ESS//Data//Survey2025//blank.json'\n",
+    "blank_json = cd + r'\\I002658A_ESS\\Data\\Survey2025\\blank.json'\n",
     "\n",
     "# Create dataframes from datasets\n",
     "'''\n",
