--- a/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
+++ b/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "if 'google.colab' in sys.modules:\n",
     "\n",
-    "    repo_path = r'\\content\\I002658A_ESS'\n",
+    "    repo_path = '/content/I002658A_ESS'\n",
     "    if not os.path.exists(repo_path):\n",
     "        !git clone https://github.com/SENSE-UGent/I002658A_ESS.git\n",
     "    if repo_path not in sys.path:\n",
@@ -49,7 +49,7 @@
     "\n",
     "else:\n",
     "\n",
-    "    repo_path = r'c:\\Users\\pdweerdt\\Documents\\Repos\\I002658A_ESS' # Change this to the location of the repository on your machine\n",
+    "    repo_path = r'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS' # Change this to the location of the repository on your machine\n",
     "    if repo_path not in sys.path:\n",
     "        sys.path.append(repo_path) \n",
     "\n",
@@ -58,7 +58,7 @@
     "\n",
     "# Read the requirements.txt file\n",
     "\n",
-    "requirements_path = repo_path + r'\\Utils\\requirements.txt'\n",
+    "requirements_path = repo_path + '/Utils/requirements.txt'\n",
     "\n",
     "with open(requirements_path) as f:\n",
     "    required_packages = f.read().splitlines()\n",
@@ -269,12 +269,12 @@
     "# 0.3: Get dataset location\n",
     "# -------------------------\n",
     "# store dataset paths as string variables\n",
-    "FDEM_surveydata = cd + r'\\I002658A_ESS\\Data\\Survey2025\\FDEM_2024.csv'\n",
-    "FDEM_transect = cd + r'\\I002658A_ESS\\Data\\Survey2025\\FDEM_transect_2024.csv'\n",
-    "samples = cd + r'\\I002658A_ESS\\Data\\Survey2025\\samples_2024.csv'\n",
+    "FDEM_surveydata = cd + '//I002658A_ESS//Data//Survey2025//FDEM_2024.csv'\n",
+    "FDEM_transect = cd + '//I002658A_ESS//Data//Survey2025//FDEM_transect_2024.csv'\n",
+    "samples = cd + '//I002658A_ESS//Data//Survey2025//samples_2024.csv'\n",
     "\n",
     "# for grid masking file\n",
-    "blank_json = cd + r'\\I002658A_ESS\\Data\\Survey2025\\blank.json'\n",
+    "blank_json = cd + '//I002658A_ESS//Data//Survey2025//blank.json'\n",
     "\n",
     "# Create dataframes from datasets\n",
     "'''\n",
@@ -331,9 +331,9 @@
    "outputs": [],
    "source": [
     "#  Define the path where to export results, make sure the folder exists\n",
-    "export_path = cd + r'\\I002658A_ESS\\Results'\n",
+    "export_path = cd + '//I002658A_ESS//Results'\n",
     "\n",
-    "print('Results will be exported to: ', export_path)"
+    "print(\"Results will be exported to: \", export_path)"
    ]
   },
   {
