--- a/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
+++ b/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "else:\n",
     "\n",
-    "    repo_path = r'D:\\pjdsmedt\\OneDrive - UGent\\Werkmap_OD\\Code_OD\\00_repos\\I002658A_ESS' # Change this to the location of the repository on your machine\n",
+    "    repo_path = r'c:/Users/pdweerdt/Documents/Repos/I002658A_ESS' # Change this to the location of the repository on your machine\n",
     "    if repo_path not in sys.path:\n",
     "        sys.path.append(repo_path) \n",
     "\n",
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "# set the working directory, place an r in front to address special characters\n",
-    "os.chdir(r'D:\\pjdsmedt\\OneDrive - UGent\\Werkmap_OD\\Code_OD\\00_repos')\n",
+    "os.chdir(r'c:\\Users\\pdweerdt\\Documents\\Repos')\n",
     "\n",
     "# get the current directory and store it as a variable\n",
     "\n",
@@ -269,12 +269,12 @@
     "# 0.3: Get dataset location\n",
     "# -------------------------\n",
     "# store dataset paths as string variables\n",
-    "FDEM_surveydata = cd + '//draft_I002658A_ESS//Data//Survey2025//FDEM_2025.csv'\n",
-    "FDEM_transect = cd + '//draft_I002658A_ESS//Data//Survey2025//FDEM_transect_2025.csv'\n",
-    "samples = cd + '//draft_I002658A_ESS//Data//Survey2025//samples_2025.csv'\n",
+    "FDEM_surveydata = cd + '//I002658A_ESS//Data//Survey2025//FDEM_2025.csv'\n",
+    "FDEM_transect = cd + '//I002658A_ESS//Data//Survey2025//FDEM_transect_2025.csv'\n",
+    "samples = cd + '//I002658A_ESS//Data//Survey2025//samples_2025.csv'\n",
     "\n",
     "# for grid masking file\n",
-    "blank_json = cd + '//draft_I002658A_ESS//Data//Survey2025//blank.json'\n",
+    "blank_json = cd + '//I002658A_ESS//Data//Survey2025//blank.json'\n",
     "\n",
     "# Create dataframes from datasets\n",
     "'''\n",
@@ -974,12 +974,8 @@
     "             sample_transect.models[0]]\n",
     "\n",
     "ds_inv = pd.DataFrame(data, columns=['x', 'y'] + layer_cols)\n",
-    "selected_columns_ds = pd.concat([ds.iloc[:, 4:11], ds.iloc[:, 17:]], axis=1)\n",
-    "# rename column x_query to x and y_query to y\n",
-    "# selected_columns_ds = selected_columns_ds.rename(columns={'x_query': 'x', 'y_query': 'y'})\n",
-    "#ds_all = pd.concat([ds_inv, selected_columns_ds], axis=1)\n",
+    "\n",
     "ds_all = pd.merge(ds, ds_inv, on=['x', 'y'], how='left')\n",
-    "#ds_all = ds_all.dropna()\n",
     "\n",
     "unique_sample_ids = ds_all['ID'].unique()\n",
     "\n",
